<resources>
    <string name="app_name">Project2_1572010</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repassword">Re-Password</string>
    <string name="Login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="admin">Admin</string>
    <string name="kasir">Kasir</string>
    <string name="alamatUser">Alamat</string>
    <string name="namaUser">Nama</string>
    <string name="noTelpUser">No Telepon</string>
    <string name="role">Role</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="users">Users</string>
    <string name="namaBarang">Nama Barang</string>
    <string name="stock">Stock</string>
    <string name="hargaJual">Harga Jual</string>
    <string name="hargaBeli">Harga Beli</string>
    <string name="barang">Barang</string>
    <string name="parcel_user" translatable="false">parcel_user</string>
    <string name="parcel_barang" translatable="false">parcel_barang</string>
    <string name="parcel_kasir" translatable="false">parcel_kasir</string>
    <string name="logout">Logout</string>
    <string name="jumlah">Jumlah</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_kasir">Kasir</string>
    <string name="nav_laporan">Laporan</string>
    <string name="nav_user">User</string>
    <string name="nav_barang">Barang</string>
</resources>
